# lua-llvm

./: .gitignore  .luacov  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  llvm-scm-1.rockspec  llvm.nobj.c  llvm.nobj.lua  lua-llvm-scm-0.rockspec
.travis/: install_llvm.sh  install_lua.sh  install_luanativeobjects.sh
cmake/: LuaNativeObjects.cmake
docs/: index.html  llvm.luadoc
docs/llvm/: AtomicOrdering.luadoc  AtomicRMWBinOp.luadoc  AttributeIndex.luadoc  BasicBlock.luadoc  Builder.luadoc  CallConv.luadoc  Context.luadoc  DLLStorageClass.luadoc  DiagnosticSeverity.luadoc  FloatType.luadoc  FloatValue.luadoc  FunctionType.luadoc  FunctionValue.luadoc  IntPredicate.luadoc  IntType.luadoc  IntValue.luadoc  LandingPadClauseTy.luadoc  Linkage.luadoc  Module.luadoc  Opcode.luadoc  RealPredicate.luadoc  ThreadLocalMode.luadoc  Type.luadoc  TypeKind.luadoc  Value.luadoc  ValueKind.luadoc  Visibility.luadoc  const.luadoc
docs/modules/: AtomicOrdering.html  AtomicRMWBinOp.html  AttributeIndex.html  BasicBlock.html  Builder.html  CallConv.html  Context.html  DLLStorageClass.html  DiagnosticSeverity.html  FloatType.html  FloatValue.html  FunctionType.html  FunctionValue.html  IntPredicate.html  IntType.html  IntValue.html  LandingPadClauseTy.html  Linkage.html  Module.html  Opcode.html  RealPredicate.html  ThreadLocalMode.html  Type.html  TypeKind.html  Value.html  ValueKind.html  Visibility.html  const.html  llvm.html
rocks/: lua-llvm-scm-0.rockspec
rockspecs/: llvm-scm-0.rockspec
spec/: builder_spec.lua  core_spec.lua  enums_spec.lua
spec/core/: basic_block_spec.lua  context_spec.lua  module_spec.lua  type_spec.lua  value_spec.lua
src/: basic_block.nobj.lua  builder.nobj.lua  enums.nobj.lua  llvm.lua  message.nobj.lua  module.lua  object.nobj.lua
src/core/: basic_block.nobj.lua  context.nobj.lua  core.nobj.lua  module.nobj.lua  type.nobj.lua  types.nobj.lua  value.nobj.lua
src/core/types/: integer.nobj.lua  type.nobj.lua  types.nobj.lua
